tests/src/snapshots/vitte_tests__snap__parser__hello_world.snap
---
source: tests/src/lib.rs
assertion_line: 380
expression: norm
---
Program {
items: [
Function(
Function {
name: "main",
params: [],
return_type: None,
body: Block {
stmts: [
Let {
name: "greeting",
ty: Some(
Str,
),
value: Some(
Literal(
Str(
"hello",
),
),
),
span: Some(
Span {
line: 2,
column: 5,
offset: 16,
},
),
},
Let {
name: "audience",
ty: Some(
Str,
),
value: Some(
Literal(
Str(
"world",
),
),
),
span: Some(
Span {
line: 3,
column: 5,
offset: 49,
},
),
},
Expr(
Call {
func: Ident(
"print",
),
args: [
Binary {
left: Binary {
left: Ident(
"greeting",
),
op: Add,
right: Literal(
Str(
", ",
),
),
},
op: Add,
right: Ident(
"audience",
),
},
],
},
),
],
span: Some(
Span {
line: 1,
column: 11,
offset: 10,
},
),
},
span: Some(
Span {
line: 1,
column: 1,
offset: 0,
},
),
},
),
],
}
